// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match regular button snapshot 1`] = `
<button
  type="button"
>
  Add
</button>
`;

exports[`Button should match submit button snapshot 1`] = `
<button
  type="submit"
>
  Send
</button>
`;
